--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -14,6 +14,7 @@
     "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.15.4",
     "@sanity/presentation": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
     "apps-common": "workspace:*",
     "rxjs": "^7.8.1",
