--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
     "build": {
       "env": ["GITHUB_ACTIONS"],
       "outputs": [".svelte-kit/**", "dist/**", "dist-svelte/**"],
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "outputMode": "new-only"
     },
     "test": {
       "env": ["GITHUB_ACTIONS"],
