chore: fix next builds

--- a/apps/next-server-only/tsconfig.json
+++ b/apps/next-server-only/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "preserve",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -27,7 +27,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "/home/runner/work/visual-editing/visual-editing/apps/next-server-only/.next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
