chore: fix storybook build command

--- a/packages/visual-editing/turbo.json
+++ b/packages/visual-editing/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "tasks": {
     "build-storybook": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["build"]
     },
     "storybook": {
       "persistent": false
