--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -97,6 +97,7 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/comlink": "^0.0.1",
     "@sanity/icons": "^3.3.1",
     "@sanity/preview-url-secret": "workspace:^",
     "@sanity/ui": "^2.8.8",
@@ -113,7 +114,6 @@
     "suspend-react": "0.1.3"
   },
   "devDependencies": {
-    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.2",
