--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -164,11 +164,11 @@
   },
   "devDependencies": {
     "@remix-run/react": "^2.11.1",
-    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "6.21.2",
     "@sanity/color": "^3.0.6",
+    "@sanity/comlink": "^0.0.1",
     "@sanity/demo": "^2.0.0",
     "@sanity/pkg-utils": "6.10.12",
     "@sanity/ui": "2.8.8",
