--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -163,11 +163,11 @@
     "valibot": "0.31.1"
   },
   "devDependencies": {
-    "@remix-run/react": "^2.11.1",
+    "@remix-run/react": "^2.12.0",
     "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
-    "@sanity/client": "6.21.2",
+    "@sanity/client": "^6.21.3",
     "@sanity/color": "^3.0.6",
     "@sanity/demo": "^2.0.0",
     "@sanity/pkg-utils": "6.10.12",
@@ -190,7 +190,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.8.0",
@@ -202,7 +202,7 @@
     "rimraf": "^5.0.5",
     "storybook": "^8.2.9",
     "styled-components": "6.1.13",
-    "svelte": "^4.2.18",
+    "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "5.6.2",
     "uuid": "10.0.0",
