--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "pnpm lint -- --fix",
     "prepare": "husky",
     "preview": "turbo run preview",
+    "release:canary": "zx scripts/release-canary.mjs",
     "storybook:visual-editing": "turbo run build --filter='@sanity/visual-editing^...' && turbo watch dev storybook --filter='@sanity/visual-editing...'",
     "test": "turbo run test"
   },
@@ -48,7 +49,8 @@
     "prettier-plugin-tailwindcss": "0.6.6",
     "pretty-quick": "^4.0.0",
     "turbo": "2.1.1",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "zx": "^8.1.5"
   },
   "packageManager": "pnpm@9.10.0",
   "pnpm": {
